    * Improved Tidal error handling and automatic login
    * Improved Tidal search to handle duplicate albums
    * Notify collection backend about renamed files when organising files
    * Added more background image options
    * Removed API Seeds lyrics provider (require payment)
    * Added group by format
    * Fixed gstreamer leaks

Version 0.5.2:

    * Added error handling and message for URL handler
    * Added SingleCoreApplication secondary check
    * Fixed memory leaks in devices
    * Fixed more stability issues in devices
    * Remove remastered from album title when searching for lyrics, covers and scrobbling
    * Fixed CMake check for X11 headers
    * Enabled iLister and AFC device
    * Added saving of album cover to gpod devices
    * Fixed AAC/MP4 transcoder
    * Added log to organise error dialog
    * Added warning when enabling X11 shortcuts on Gnome, Cinnamon or KDE
    * Fixed transcoder to use filename suffixes to solve issues when copying files to iPods
    * Added option to copy album cover in organise dialog (filesystem and libgpod devices)
    * Added raise() to make sure window is on top when strawberry is started twice

Version 0.5.1:

    * Added scrobbler with support for Last.fm, Libre.fm and ListenBrainz
    * Fixed key up causing playback to reset
    * New improved last.fm and musicbrainz album cover providers
    * Removed Qt5Xml and liblastfm dependency
    * Replaced sha2 with QCryptographicHash
    * Fixed songs not showing up under devices
    * Removed qxt dependency
    * Replaced globalshortcuts backend for X11 and Windows
    * Made global shortcuts on X11 optional and off by default
    * Added support for Monkey's Audio
    * Fixed crashes in devices
    * Enabled transcoder and organiser in menus
    * Added transcoder for WavPack
    * Changed default group by for collection to album artist
    * Enabled organise without gstreamer
    * Added cmake USE_BUNDLE option for macOS/Windows